# u-sensor-node

./: .gitmodules  CMakeLists.txt  config.cmake
cmake/: rule_gen_strategies.cmake
profiles/push_pull/: config.cmake
profiles/push_pull_ping_s/: config.cmake  log.config
src/: CMakeLists.txt
src/app/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt
src/core/include/: core.h
src/core/src/: core.c
src/schc/: CMakeLists.txt
src/schc/include/: schc_base.h  schc_table.h
src/schc/src/: schc_base.c  schc_lu_table_commons.c
src/schc/src/tables/: schc_push_pull.c  schc_push_pull_ping_s.c
src/sensing/: CMakeLists.txt
src/sensing/include/: stat.h  state_sensing.h  temp_sensing.h
src/sensing/src/: dummy_sensing.c  stat.c
src/utils/: CMakeLists.txt
src/utils/include/: io.h  logging.h  utils.h
src/utils/src/: io.c  logging.c  utils.c
