
set(APP_EXEC_NAME ${PROJECT_NAME})

add_executable(${APP_EXEC_NAME}
        "main.c"
)
target_compile_definitions(${APP_EXEC_NAME} PRIVATE SERIAL_PORT="${SERIAL_PORT}" NODE_ID=${NODE_ID} GATEWAY_ID=${GATEWAY_ID} PUSH_INTERVAL_S=${PUSH_INTERVAL_S})
target_link_libraries(${APP_EXEC_NAME} PRIVATE ${AHOI_LIB} ${SCHC_LIB} ${SENSING_LIB} ${STAT_LIB} ${IO_LIB} ${UTILS_LIB} ${LOGGING_LIB})